feat: implement updates in smoke-update-windows.ps1 (part 2)